// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: active facet 1`] = `
<FacetBox
  property="scopes"
>
  <FacetHeader
    fetching={true}
    name="issues.facet.scopes"
    onClear={[Function]}
    onClick={[Function]}
    open={true}
    values={
      [
        "issue.scope.MAIN",
      ]
    }
  />
  <FacetItemsList>
    <FacetItem
      active={true}
      halfWidth={false}
      key="MAIN"
      loading={false}
      name={
        <span
          className="display-flex-center"
        >
          <QualifierIcon
            aria-hidden={true}
            className="little-spacer-right"
            qualifier="FIL"
          />
           
          issue.scope.MAIN
        </span>
      }
      onClick={[Function]}
      value="MAIN"
    />
    <FacetItem
      active={false}
      halfWidth={false}
      key="TEST"
      loading={false}
      name={
        <span
          className="display-flex-center"
        >
          <QualifierIcon
            aria-hidden={true}
            className="little-spacer-right"
            qualifier="UTS"
          />
           
          issue.scope.TEST
        </span>
      }
      onClick={[Function]}
      value="TEST"
    />
  </FacetItemsList>
  <MultipleSelectionHint
    options={0}
    values={1}
  />
</FacetBox>
`;

exports[`should render correctly: default 1`] = `
<FacetBox
  property="scopes"
>
  <FacetHeader
    fetching={true}
    name="issues.facet.scopes"
    onClear={[Function]}
    onClick={[Function]}
    open={false}
    values={[]}
  />
</FacetBox>
`;

exports[`should render correctly: disabled facet 1`] = `
<FacetBox
  property="scopes"
>
  <FacetHeader
    fetching={true}
    name="issues.facet.scopes"
    onClear={[Function]}
    onClick={[Function]}
    open={true}
    values={[]}
  />
  <FacetItemsList>
    <FacetItem
      active={false}
      halfWidth={false}
      key="MAIN"
      loading={false}
      name={
        <span
          className="display-flex-center"
        >
          <QualifierIcon
            aria-hidden={true}
            className="little-spacer-right"
            qualifier="FIL"
          />
           
          issue.scope.MAIN
        </span>
      }
      onClick={[Function]}
      stat={0}
      value="MAIN"
    />
    <FacetItem
      active={false}
      halfWidth={false}
      key="TEST"
      loading={false}
      name={
        <span
          className="display-flex-center"
        >
          <QualifierIcon
            aria-hidden={true}
            className="little-spacer-right"
            qualifier="UTS"
          />
           
          issue.scope.TEST
        </span>
      }
      onClick={[Function]}
      value="TEST"
    />
  </FacetItemsList>
  <MultipleSelectionHint
    options={1}
    values={0}
  />
</FacetBox>
`;

exports[`should render correctly: open 1`] = `
<FacetBox
  property="scopes"
>
  <FacetHeader
    fetching={true}
    name="issues.facet.scopes"
    onClear={[Function]}
    onClick={[Function]}
    open={true}
    values={[]}
  />
  <FacetItemsList>
    <FacetItem
      active={false}
      halfWidth={false}
      key="MAIN"
      loading={false}
      name={
        <span
          className="display-flex-center"
        >
          <QualifierIcon
            aria-hidden={true}
            className="little-spacer-right"
            qualifier="FIL"
          />
           
          issue.scope.MAIN
        </span>
      }
      onClick={[Function]}
      value="MAIN"
    />
    <FacetItem
      active={false}
      halfWidth={false}
      key="TEST"
      loading={false}
      name={
        <span
          className="display-flex-center"
        >
          <QualifierIcon
            aria-hidden={true}
            className="little-spacer-right"
            qualifier="UTS"
          />
           
          issue.scope.TEST
        </span>
      }
      onClick={[Function]}
      value="TEST"
    />
  </FacetItemsList>
  <MultipleSelectionHint
    options={0}
    values={0}
  />
</FacetBox>
`;
